comment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tp-comment
  labels:
    app: tp-comment
spec:
  selector:
    matchLabels:
      app: tp-comment
  template:
    metadata:
      labels:
        app:  tp-comment
    spec:
      containers:
        - name:  tp-comments
          image:  tp-comments
          imagePullPolicy: Never

---

kind: Service
apiVersion: v1
metadata:
  name: comments-srv
spec:
  selector:
    app:  tp-comment
  type:  ClusterIP
  ports:
    - port:  4001
