moderation.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tp-moderation
  labels:
    app: tp-moderation
spec:
  selector:
    matchLabels:
      app: tp-moderation
  template:
    metadata:
      labels:
        app:  tp-moderation
    spec:
      containers:
        - name:  tp-moderation
          image:  tp-moderation
          imagePullPolicy: Never

---

kind: Service
apiVersion: v1
metadata:
  name:  moderation-srv
spec:
  selector:
    app:  tp-moderation
  type:  ClusterIP
  ports:
    - port:  4003
