ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: minikube
    http:
      paths:
      - path: /posts/create
        pathType: Prefix
        backend:
          service:
            name: posts-clusterip-srv
            port:
              number: 4000
      - path: /posts
        pathType: Prefix
        backend:
          service:
            name: query-srv
            port:
              number: 4002
      - path: /posts/?(.*)/comments
        pathType: ImplementationSpecific
        backend:
          service:
            name: comments-srv
            port:
              number: 4001
      - pathType: ImplementationSpecific
        path: /?(.*)
        backend:
          service:
            name: client-srv
            port: 
              number: 3000
